parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> expression
Rule 1     expression -> expression PLUS term
Rule 2     expression -> expression MINUS term
Rule 3     expression -> term
Rule 4     term -> term TIMES factor
Rule 5     term -> term DIVIDE factor
Rule 6     term -> factor
Rule 7     factor -> NUMBER
Rule 8     factor -> LPAREN expression RPAREN
Rule 9     factor -> factor LPAREN expression RPAREN

Terminals, with rules where they appear

DIVIDE               : 5
LPAREN               : 8 9
MINUS                : 2
NUMBER               : 7
PLUS                 : 1
RPAREN               : 8 9
TIMES                : 4
error                : 

Nonterminals, with rules where they appear

expression           : 1 2 8 9 0
factor               : 4 5 6 9
term                 : 1 2 3 4 5

Parsing method: LALR

state 0

    (0) S' -> . expression
    (1) expression -> . expression PLUS term
    (2) expression -> . expression MINUS term
    (3) expression -> . term
    (4) term -> . term TIMES factor
    (5) term -> . term DIVIDE factor
    (6) term -> . factor
    (7) factor -> . NUMBER
    (8) factor -> . LPAREN expression RPAREN
    (9) factor -> . factor LPAREN expression RPAREN

    NUMBER          shift and go to state 4
    LPAREN          shift and go to state 5

    expression                     shift and go to state 1
    term                           shift and go to state 2
    factor                         shift and go to state 3

state 1

    (0) S' -> expression .
    (1) expression -> expression . PLUS term
    (2) expression -> expression . MINUS term

    PLUS            shift and go to state 6
    MINUS           shift and go to state 7


state 2

    (3) expression -> term .
    (4) term -> term . TIMES factor
    (5) term -> term . DIVIDE factor

    PLUS            reduce using rule 3 (expression -> term .)
    MINUS           reduce using rule 3 (expression -> term .)
    $end            reduce using rule 3 (expression -> term .)
    RPAREN          reduce using rule 3 (expression -> term .)
    TIMES           shift and go to state 8
    DIVIDE          shift and go to state 9


state 3

    (6) term -> factor .
    (9) factor -> factor . LPAREN expression RPAREN

    TIMES           reduce using rule 6 (term -> factor .)
    DIVIDE          reduce using rule 6 (term -> factor .)
    PLUS            reduce using rule 6 (term -> factor .)
    MINUS           reduce using rule 6 (term -> factor .)
    $end            reduce using rule 6 (term -> factor .)
    RPAREN          reduce using rule 6 (term -> factor .)
    LPAREN          shift and go to state 10


state 4

    (7) factor -> NUMBER .

    LPAREN          reduce using rule 7 (factor -> NUMBER .)
    TIMES           reduce using rule 7 (factor -> NUMBER .)
    DIVIDE          reduce using rule 7 (factor -> NUMBER .)
    PLUS            reduce using rule 7 (factor -> NUMBER .)
    MINUS           reduce using rule 7 (factor -> NUMBER .)
    $end            reduce using rule 7 (factor -> NUMBER .)
    RPAREN          reduce using rule 7 (factor -> NUMBER .)


state 5

    (8) factor -> LPAREN . expression RPAREN
    (1) expression -> . expression PLUS term
    (2) expression -> . expression MINUS term
    (3) expression -> . term
    (4) term -> . term TIMES factor
    (5) term -> . term DIVIDE factor
    (6) term -> . factor
    (7) factor -> . NUMBER
    (8) factor -> . LPAREN expression RPAREN
    (9) factor -> . factor LPAREN expression RPAREN

    NUMBER          shift and go to state 4
    LPAREN          shift and go to state 5

    expression                     shift and go to state 11
    term                           shift and go to state 2
    factor                         shift and go to state 3

state 6

    (1) expression -> expression PLUS . term
    (4) term -> . term TIMES factor
    (5) term -> . term DIVIDE factor
    (6) term -> . factor
    (7) factor -> . NUMBER
    (8) factor -> . LPAREN expression RPAREN
    (9) factor -> . factor LPAREN expression RPAREN

    NUMBER          shift and go to state 4
    LPAREN          shift and go to state 5

    term                           shift and go to state 12
    factor                         shift and go to state 3

state 7

    (2) expression -> expression MINUS . term
    (4) term -> . term TIMES factor
    (5) term -> . term DIVIDE factor
    (6) term -> . factor
    (7) factor -> . NUMBER
    (8) factor -> . LPAREN expression RPAREN
    (9) factor -> . factor LPAREN expression RPAREN

    NUMBER          shift and go to state 4
    LPAREN          shift and go to state 5

    term                           shift and go to state 13
    factor                         shift and go to state 3

state 8

    (4) term -> term TIMES . factor
    (7) factor -> . NUMBER
    (8) factor -> . LPAREN expression RPAREN
    (9) factor -> . factor LPAREN expression RPAREN

    NUMBER          shift and go to state 4
    LPAREN          shift and go to state 5

    factor                         shift and go to state 14

state 9

    (5) term -> term DIVIDE . factor
    (7) factor -> . NUMBER
    (8) factor -> . LPAREN expression RPAREN
    (9) factor -> . factor LPAREN expression RPAREN

    NUMBER          shift and go to state 4
    LPAREN          shift and go to state 5

    factor                         shift and go to state 15

state 10

    (9) factor -> factor LPAREN . expression RPAREN
    (1) expression -> . expression PLUS term
    (2) expression -> . expression MINUS term
    (3) expression -> . term
    (4) term -> . term TIMES factor
    (5) term -> . term DIVIDE factor
    (6) term -> . factor
    (7) factor -> . NUMBER
    (8) factor -> . LPAREN expression RPAREN
    (9) factor -> . factor LPAREN expression RPAREN

    NUMBER          shift and go to state 4
    LPAREN          shift and go to state 5

    factor                         shift and go to state 3
    expression                     shift and go to state 16
    term                           shift and go to state 2

state 11

    (8) factor -> LPAREN expression . RPAREN
    (1) expression -> expression . PLUS term
    (2) expression -> expression . MINUS term

    RPAREN          shift and go to state 17
    PLUS            shift and go to state 6
    MINUS           shift and go to state 7


state 12

    (1) expression -> expression PLUS term .
    (4) term -> term . TIMES factor
    (5) term -> term . DIVIDE factor

    PLUS            reduce using rule 1 (expression -> expression PLUS term .)
    MINUS           reduce using rule 1 (expression -> expression PLUS term .)
    $end            reduce using rule 1 (expression -> expression PLUS term .)
    RPAREN          reduce using rule 1 (expression -> expression PLUS term .)
    TIMES           shift and go to state 8
    DIVIDE          shift and go to state 9


state 13

    (2) expression -> expression MINUS term .
    (4) term -> term . TIMES factor
    (5) term -> term . DIVIDE factor

    PLUS            reduce using rule 2 (expression -> expression MINUS term .)
    MINUS           reduce using rule 2 (expression -> expression MINUS term .)
    $end            reduce using rule 2 (expression -> expression MINUS term .)
    RPAREN          reduce using rule 2 (expression -> expression MINUS term .)
    TIMES           shift and go to state 8
    DIVIDE          shift and go to state 9


state 14

    (4) term -> term TIMES factor .
    (9) factor -> factor . LPAREN expression RPAREN

    TIMES           reduce using rule 4 (term -> term TIMES factor .)
    DIVIDE          reduce using rule 4 (term -> term TIMES factor .)
    PLUS            reduce using rule 4 (term -> term TIMES factor .)
    MINUS           reduce using rule 4 (term -> term TIMES factor .)
    $end            reduce using rule 4 (term -> term TIMES factor .)
    RPAREN          reduce using rule 4 (term -> term TIMES factor .)
    LPAREN          shift and go to state 10


state 15

    (5) term -> term DIVIDE factor .
    (9) factor -> factor . LPAREN expression RPAREN

    TIMES           reduce using rule 5 (term -> term DIVIDE factor .)
    DIVIDE          reduce using rule 5 (term -> term DIVIDE factor .)
    PLUS            reduce using rule 5 (term -> term DIVIDE factor .)
    MINUS           reduce using rule 5 (term -> term DIVIDE factor .)
    $end            reduce using rule 5 (term -> term DIVIDE factor .)
    RPAREN          reduce using rule 5 (term -> term DIVIDE factor .)
    LPAREN          shift and go to state 10


state 16

    (9) factor -> factor LPAREN expression . RPAREN
    (1) expression -> expression . PLUS term
    (2) expression -> expression . MINUS term

    RPAREN          shift and go to state 18
    PLUS            shift and go to state 6
    MINUS           shift and go to state 7


state 17

    (8) factor -> LPAREN expression RPAREN .

    LPAREN          reduce using rule 8 (factor -> LPAREN expression RPAREN .)
    TIMES           reduce using rule 8 (factor -> LPAREN expression RPAREN .)
    DIVIDE          reduce using rule 8 (factor -> LPAREN expression RPAREN .)
    PLUS            reduce using rule 8 (factor -> LPAREN expression RPAREN .)
    MINUS           reduce using rule 8 (factor -> LPAREN expression RPAREN .)
    $end            reduce using rule 8 (factor -> LPAREN expression RPAREN .)
    RPAREN          reduce using rule 8 (factor -> LPAREN expression RPAREN .)


state 18

    (9) factor -> factor LPAREN expression RPAREN .

    LPAREN          reduce using rule 9 (factor -> factor LPAREN expression RPAREN .)
    TIMES           reduce using rule 9 (factor -> factor LPAREN expression RPAREN .)
    DIVIDE          reduce using rule 9 (factor -> factor LPAREN expression RPAREN .)
    PLUS            reduce using rule 9 (factor -> factor LPAREN expression RPAREN .)
    MINUS           reduce using rule 9 (factor -> factor LPAREN expression RPAREN .)
    $end            reduce using rule 9 (factor -> factor LPAREN expression RPAREN .)
    RPAREN          reduce using rule 9 (factor -> factor LPAREN expression RPAREN .)

